<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/background_hn_2"
    android:backgroundTint="@color/background_hn_2"
    android:backgroundTintMode="@color/background_hn_2"
    >

    <ImageView
        android:id="@+id/image"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_album"
        app:tint="@color/black"
        android:contentDescription="@string/image_notification" />

    <LinearLayout
        android:id="@+id/infoMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="26dp"
        android:layout_toEndOf="@id/image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleSong"
            style="@style/TextAppearance.Compat.Notification.Title"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit ="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:textColor="@color/color_text_app" />

        <TextView
            android:id="@+id/createSong"
            style="@style/TextAppearance.Compat.Notification.Info"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit ="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:textColor="@color/color_text_app" />
    </LinearLayout>


    <ImageView
        android:id="@+id/clear"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/ic_clear"
        android:contentDescription="@string/clear" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/infoMusic"
        android:layout_toStartOf="@id/clear"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/previous"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:src="@drawable/ic_previous"
            android:contentDescription="@string/previous" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="24dp"
            android:src="@drawable/ic_play"
            android:contentDescription="@string/play" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="24dp"
            android:src="@drawable/ic_next"
            android:contentDescription="@string/next"
            tools:ignore="ContentDescription" />


    </LinearLayout>


</RelativeLayout>