<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_hn"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top"
        android:layout_alignParentTop="true"
        android:background="@drawable/circle_left_right_bottom"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/bnt_back"
            android:layout_width="@dimen/bnt_back"
            android:layout_height="@dimen/bnt_back"
            android:layout_alignStart="@+id/now_play"
            android:layout_marginStart="@dimen/marginStart_20"
            android:scaleType="fitXY"
            android:src="@drawable/ic_down"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/now_play"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:text="@string/now_playing"
            android:textColor="@color/color_text_app"
            android:textSize="@dimen/now_play"
            android:textStyle="bold" />
    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_song"
        android:layout_width="@dimen/width_image"
        android:layout_height="@dimen/height_image"
        android:layout_below="@id/top"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/infoMusic"
        android:src="@drawable/st"
        app:cardCornerRadius="@dimen/CornerRadius_image"
        app:civ_border_width="0dp" />


    <LinearLayout
        android:id="@+id/infoMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/view_bottom"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/nameMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/text_test"
            android:textColor="@color/color_text_hn"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/creatorMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/text_test"
            android:textColor="@color/color_text_hn"
            android:textSize="15sp" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/view_bottom"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/circle_left_right_top"
        android:scaleType="fitXY">


        <RelativeLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/repeat"
                android:layout_width="@dimen/width_height_icon_detail_song"
                android:layout_height="@dimen/width_height_icon_detail_song"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/repeat"
                android:src="@drawable/ic_repeat" />

            <ImageView
                android:id="@+id/love"
                android:layout_width="@dimen/width_height_icon_detail_song"
                android:layout_height="@dimen/width_height_icon_detail_song"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/love"
                android:src="@drawable/ic_favorite" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/menuControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_RelativeLayout"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/bnt_previous"
                android:layout_width="@dimen/width_height_icon_detail_song"
                android:layout_height="@dimen/width_height_icon_detail_song"
                android:layout_marginEnd="15dp"
                android:layout_weight="2"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/previous"
                android:src="@drawable/ic_previous" />

            <ImageView
                android:id="@+id/playMusic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/play"
                android:src="@drawable/ic_play" />

            <ImageView
                android:id="@+id/bnt_next"
                android:layout_width="@dimen/width_height_icon_detail_song"
                android:layout_height="@dimen/width_height_icon_detail_song"
                android:layout_weight="2"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/next"
                android:src="@drawable/ic_next" />

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/time_RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/timeMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/time_test"
                android:textColor="@color/color_text_hn" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_centerInParent="true"
                android:layout_toStartOf="@id/timeMusic"
                android:layout_toEndOf="@id/timeCurrentMusic"
                android:progress="50"
                android:progressDrawable="@drawable/volume_seekbar"
                android:thumbTint="@color/seekbar" />

            <TextView
                android:id="@+id/timeCurrentMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/time_test"
                android:textColor="@color/color_text_hn" />

        </RelativeLayout>

    </RelativeLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="165dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="101dp" />


</RelativeLayout>